fixed filter infobox overflow bug

--- a/transformap.css
+++ b/transformap.css
@@ -455,7 +455,7 @@ padding:0px;
     content: ">";
     margin-right:5px;
     position: absolute;
-    top: 1px;
+    top: -1px;
     left: 5px;
     transition: transform 0.1s, top 0.1s, left 0.1s;
 }
@@ -463,7 +463,7 @@ padding:0px;
     content: ">";
     margin-right:5px;
     position: absolute;
-    top: 3px;
+    top: 1px;
     left: 7px;
     transform: rotate(90deg);
 }
@@ -497,7 +497,7 @@ padding:0px;
     background:#6374A6;
     color:white;
     width:14px;
-    height:14px;
+ /*   height:14px; */ /* with fixed height, inner elements gets cut on bottom of outer container -> (?) has to be stretched down */
     border-radius:7px;
     margin-top:4px;
     line-height:1.0em;
@@ -536,9 +536,13 @@ padding:0px;
 }
 #sidebar .box ul.boxcontent ul.subfilter {
     padding:0 0 0 0px;
+    max-height:1000px;
+    transition: max-height 0.5s ease, margin 0.5s ease;
+    overflow:hidden;
 }
 #sidebar .box ul.boxcontent li.hidden ul.subfilter {
-    display:none;
+    max-height:0;
+    transition: max-height 0.5s ease, margin 0.5s ease;
 }
 
 #sidebar {
